[tool.poetry]
name = "analytic_bot"
version = "0.1.0"
description = ""
authors = ["abawer <a.rakhimov>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
Telethon = "^1.34.0"
nltk = "^3.8.1"
pillow = "^10.3.0"
matplotlib = "^3.8.4"
wordcloud = "^1.9.3"
pydantic-settings = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
